--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "autoprefixer": "^9.8.5",
+    "google-spreadsheet": "^3.0.11",
     "next": "^9.4.4",
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
